--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
@@ -45,3 +45,43 @@
     transform: rotate(360deg);
   }
 }
+
+html,body{
+  margin:0;
+  width:100%;
+  height:100%;
+}
+#slider,.layer{
+  position:absolute;
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+#slider>div:first-child{
+  z-index:1;
+  pointer-events:none;
+}
+#slider>div:last-child{
+  z-index:0;
+}
+.layer{
+  opacity:1;
+  transition-delay:1s;
+  transition-property: opacity;
+  transition-duration:2s;
+  transition-timing-function:ease-out;
+  background-color:#FFF;
+}
+.layer.hide{
+  opacity:0;
+}
+.content .view{
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-start;
+  width:100%;
+  height:100%;
+}
