--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
@@ -112,7 +112,7 @@ ul{
   overflow: hidden;
 }
 .view{
-  flex:2;
+  flex:3;
 
 }
 .controls{
@@ -140,14 +140,22 @@ ul{
   -webkit-transform: rotate(-45deg);
 }
 .arrow.left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-  }
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
 
-  .imagelist{
-    position:relative;
-    transition : left .2s ease-in-out;
-  }
-  .thumb li.active{
-    opacity:.5;
-  }
+.imagelist{
+  position:relative;
+  transition : left .2s ease-in-out;
+}
+.thumb li.active{
+  opacity:.5;
+}
+
+.imagelist.thumb{
+  width: 90%;
+  left: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
