--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css
@@ -110,6 +110,11 @@ ul{
 .etape2 .view .container{
   width:400px;
   overflow: hidden;
+  height:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content : center;
+  align-items: flex-start;
 }
 .view{
   flex:3;
